updated for auto-registration of agents